@@ -66,13 +66,4 @@ sourceSets {
 
 test {
     useJUnitPlatform()
-    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
 }
